2003/11/19 09:10 (-0500) rwmcfa1
	
	* t/22.GtkListStore.t: there was a skip unless 2.2.x in which the iter 
	was converted to a string, that iter is no longer the inc'd one and thus
	was 0 instead of 1. follow up to last commit.

2003/11/18 17:21 (-0500) muppetman

	* t/file-selection.t: new test

	* t/22.GtkListStore.t: fix GtkListStore test to expect new iter->next
	semantics.

	* xs/GtkFileSelection.xs: gtk_file_selection_get_filename returns a
	statically allocated string -- use GPerlFilename_const instead of
	GPerlFilename_own to avoid core dumps.

	* xs/GtkIconFactory.xs: use GPerlFilename_const to hush compiler
	warnings.  

2003/11/18 09:42 (-0500) rwmcfa1

	* xs/GtkTreeModel.xs: $model->iter_next fixed, we needed to make a copy
	of the iter, otherwise we were modifying the passed one (which isn't 
	very perly) and then returning it.

2003/11/18 01:16 (-0500) muppetman

	* xs/GtkEntry.xs, xs/GtkTextIter.xs, xs/PangoLayout.xs: now that we
	have typemaps for gunichar, implement things that were waiting on it.

	* xs/PangoLayout.xs: convert a few things to use gchar_length and 
	length(); don't make pango call strlen() when perl already knows the
	text's length!

	* t/text-iter-searches.t: new test for the GtkTextIter search tools.
	this one isn't numbered because it just needs to run after all of
	the numbered tests.

2003/11/17 23:21 (-0500) rwmcfa1

	* xs/GdkDisplayManager.xs, xs/GdkDnd.xs, xs/GdkPixmap.xs, 
	xs/GdkProperty.xs, xs/GdkScreen.xs, xs/GdkTypes.xs, xs/GdkWindow.xs, 
	xs/Gtk2.xs, xs/GtkAccelGroup.xs, xs/GtkCellRenderer.xs, 
	xs/GtkColorSelection.xs, xs/GtkCurve.xs, xs/GtkEditable.xs, 
	xs/GtkFileSelection.xs, xs/GtkIconFactory.xs, xs/GtkLabel.xs, 
	xs/GtkRadioMenuItem.xs, xs/GtkSelection.xs, xs/GtkStock.xs, 
	xs/GtkTextBuffer.xs, xs/GtkTreeModel.xs, xs/GtkTreeSortable.xs, 
	xs/GtkTreeViewColumn.xs, xs/PangoLayout.xs, xs/PangoTabs.xs: apidoc 
	added, almost all PPCODE xsubs now have it
